<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">智能拼接</string>
    <string name="app_title">康佳智能拼接系统 </string>
    <string name="about_title">关于</string>
    <string name="about_version">当前版本：V2.0.0\n\n康佳智能拼接系统！</string>
    <string name="about_summary">康佳智能拼接系统！</string>

    <string-array name="item">
        <item>康佳智能拼接系统！</item>
        <item>当前版本：V1.0.0</item>
    </string-array>

    <string name="text_row">行&#160;&#160;数</string>
    <string name="text_column">列&#160;&#160;数</string>
    <string name="set_row">2</string>
    <string name="set_column">2</string>
    <string name="set_submit">提交</string>
    <string name="about_ok">确定</string>
    <string name="dev_title">可连接设备</string>
    <string name="backlight">背光</string>
    <string name="adjustPicmode">图像模式</string>
    <string name="rgbsetting">色温</string>
    <string name="pjcontrol">拼接控制</string>
    <string name="colorR">R&#160;&#160;增益</string>
    <string name="colorG">G&#160;&#160;增益</string>
    <string name="colorB">B&#160;&#160;增益</string>
    <string name="brightness">亮度</string>
    <string name="contrast">对比度</string>
    <string name="tone">色度</string>
    <string name="sharpness">锐度</string>
    <string name="backlight_maxvalue">100</string>
    <string name="colorR_maxvalue">255</string>
    <string name="colorG_maxvalue">255</string>
    <string name="colorB_maxvalue">255</string>
    <string name="brightness_maxvalue">100</string>
    <string name="contrast_maxvalue">100</string>
    <string name="tone_maxvalue">100</string>
    <string name="sharpness_maxvalue">25</string>
    <string name="device_connect">设备连接成功了!</string>
    <string name="device_connect_fail">设备连接失败了!</string>
    <string name="device_connect_close">设备连接关闭!</string>
    <string name="device_connect_err">网络错误!</string>
    <string name="net_err">请检测并重设你的网络连接！\n\n如果网络已自动重连，请点击取消。</string>
    <string name="net_err_title">网络错误</string>
    <string name="exit">是否退出 ?</string>
    <string name="select_screen">请选择屏幕！</string>
    <string name="warning">警告</string>
    <string name="line">分割线</string>
    <string name="write_fail">数据写入失败！</string>
    <string name="port_close">串口未打开！</string>
    <string name="pj_rxc">拼接行列</string>
    <string name="pj_source">拼接信号</string>
    <string name="pic_mode">图像模式</string>
    <string name="color_adjust">色温调节</string>
    <string name="source_pj_dvi">DVI</string>
    <string name="source_pj_hdmi">HDMI</string>
    <string name="source_pj_ypbpr">YPBPR</string>
    <string name="source_pj_vga">VGA</string>
    <string name="source_pj_cvbs">CVBS</string>
    <string name="picmode_standard">标准</string>
    <string name="picmode_dynamic">动态</string>
    <string name="picmode_manual">自定义</string>
    <string name="color_cold">6500K</string>
    <string name="color_warm">9300K</string>
    <string name="color_manual">自定义</string>
    <string name="backlight_adj">背光</string>
    <string name="set_sleep">休眠</string>
    <string name="set_wake">唤醒</string>
    <string name="exitdialog_title">提示</string>
    <string name="exitdialog_infor">您确定要退出吗？</string>
    <string name="buffering">正在加載……</string>
    <string name="submit">确&#160;&#160;定</string>
    <string name="quit">取&#160;&#160;消</string>
    <string name="revocation">撤&#160;销</string>
    <string name="netconnect">连接至网络</string>
    <string name="contentDescription">contentDescription</string>
    <string name="netconnectinfor">正在处理网络连接\n\n请稍后</string>
    <!-- 这是所有手动设置需要用到的tag标签 -->
    <string name="manualsetting">manualsetting</string>

</resources>