<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="onBtnClick">

    <LinearLayout
        android:id="@+id/poplinearlayout"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:clickable="true"
        android:background="@color/red">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:layout_gravity="top"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pj_source"
                android:textColor="@color/color_white"
                android:textSize="10sp" />

            <!-- The dividing line -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/source_pj_dvi"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/thumb_button"
                    android:onClick="onBtnClick"
                    android:text="@string/source_pj_dvi"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/source_pj_hdmi"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/thumb_button"
                    android:onClick="onBtnClick"
                    android:text="@string/source_pj_hdmi"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/source_pj_ypbpr"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/thumb_button"
                    android:onClick="onBtnClick"
                    android:text="@string/source_pj_ypbpr"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/source_pj_vga"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/thumb_button"
                    android:onClick="onBtnClick"
                    android:text="@string/source_pj_vga"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/source_pj_cvbs"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/thumb_button"
                    android:onClick="onBtnClick"
                    android:text="@string/source_pj_cvbs"
                    android:textSize="12sp" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/thumb_button"
                    android:visibility="invisible" />
            </LinearLayout>

            <!-- The dividing line -->


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pic_mode"
                android:textColor="@color/color_white"
                android:textSize="10sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/picmode_standard"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/thumb_button"
                    android:onClick="onBtnClick"
                    android:text="@string/picmode_standard"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/picmode_dynamic"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/thumb_button"
                    android:onClick="onBtnClick"
                    android:text="@string/picmode_dynamic"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/picmode_manual"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/thumb_button"
                    android:onClick="onBtnClick"
                    android:text="@string/picmode_manual"
                    android:textSize="12sp" />
            </LinearLayout>

            <!-- the divide line -->


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/color_adjust"
                android:textColor="@color/color_white"
                android:textSize="10sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/color_cold"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/thumb_button"
                    android:onClick="onBtnClick"
                    android:text="@string/color_cold"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/color_warm"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/thumb_button"
                    android:onClick="onBtnClick"
                    android:text="@string/color_warm"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/color_manual"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/thumb_button"
                    android:onClick="onBtnClick"
                    android:text="@string/color_manual"
                    android:textSize="12sp" />
            </LinearLayout>

            <!-- the divide line -->


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/backlight_adj"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/thumb_button"
                    android:onClick="onBtnClick"
                    android:text="@string/backlight_adj"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/set_sleep"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/thumb_button"
                    android:onClick="onBtnClick"
                    android:text="@string/set_sleep"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/set_wake"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/thumb_button"
                    android:onClick="onBtnClick"
                    android:text="@string/set_wake"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
